<resources>
    <string name="app_name">Lazeez</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->



    <string name="nav_home">المطاعم</string>
    <string name="nav_city">المدينة</string>
    <string name="nav_offers">العروض</string>
    <string name="nav_cart">سلتي</string>
    <string name="nav_enter">الدخول</string>
    <string name="nav_call">كلمنا</string>
    <string name="nav_about">عن لذيذ</string>
    <string name="nav_language">اللغه</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>
