<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="all"
        >
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/restaurant_256"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_city"
            android:icon="@mipmap/search_10_256"
            android:title="@string/nav_city" />
        <item
            android:id="@+id/nav_offers"
        android:icon="@mipmap/gift_3_256"
        android:title="@string/nav_offers" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@mipmap/cart_41_256"
            android:title="@string/nav_cart" />

        <item
            android:id="@+id/nav_enter"
            android:title="@string/nav_enter"
            android:icon="@mipmap/logout_256"
             />




        <item
            android:id="@+id/nav_call"
            android:icon="@mipmap/phone_2_256"
            android:orderInCategory="@android:integer/config_longAnimTime"
            android:title="@string/nav_call" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/info_256"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_language"
            android:icon="@mipmap/globe_256"
            android:title="@string/nav_language" />


    </group>

</menu>
